XSCOLIBRI-109: Error / Warning / Info messages inline overlap with surrounding text and eachother XSTOUCAN-124: Error / Warning / Info messages inline overlap with surrounding text and eachother XSALBATROSS-63: Error / Warning / Info messages inline overlap with surrounding text and eachother Fixed with help from Marta Girdea.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@23666 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
+++ b/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
@@ -3308,6 +3308,12 @@ ul.xlist li.xitem div.xitemcontainer ul.xlist {
   color: #e14726;
 }
 
+span.errormessage, span.warningmessage, span.infomessage, span.plainmessage {
+  background-position: 2px center;
+  overflow:visible;
+  padding:0 2px 0 22px;
+}
+
 /* Start Colibri.css */
 
 /**********************************************************************************************/
